--- a/todo.ui
+++ b/todo.ui
@@ -6,21 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1315</width>
+    <width>1081</width>
     <height>648</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>-20</y>
+      <x>340</x>
+      <y>0</y>
       <width>261</width>
-      <height>101</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -33,14 +36,16 @@
    <widget class="QPushButton" name="Sort_by_name">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>500</y>
-      <width>141</width>
-      <height>71</height>
+      <x>20</x>
+      <y>330</y>
+      <width>171</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(249, 178, 255);</string>
+     <string notr="true">color: rgb(249, 178, 255);
+color: rgb(255, 0, 0);
+font: 700 12pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="text">
      <string>Sort Tasks By Name</string>
@@ -49,16 +54,16 @@
    <widget class="QPushButton" name="sort_by_dead_line">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>500</y>
-      <width>141</width>
-      <height>71</height>
+      <x>20</x>
+      <y>400</y>
+      <width>171</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-top-color: rgb(39, 255, 39);
-alternate-background-color: rgb(210, 255, 228);
-color: rgb(255, 225, 117);</string>
+     <string notr="true">font: 700 12pt &quot;Segoe UI&quot;;
+color: rgb(0, 13, 255);
+</string>
     </property>
     <property name="text">
      <string>Sort Tasks By deadline</string>
@@ -67,14 +72,15 @@ color: rgb(255, 225, 117);</string>
    <widget class="QPushButton" name="Sort_by_time_created">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>500</y>
-      <width>151</width>
-      <height>71</height>
+      <x>10</x>
+      <y>470</y>
+      <width>212</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 111, 154);</string>
+     <string notr="true">color: rgb(255, 111, 154);
+font: 700 12pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="text">
      <string>Sort Tasks By Time Created</string>
@@ -83,14 +89,15 @@ color: rgb(255, 225, 117);</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>30</y>
+      <x>610</x>
+      <y>-20</y>
       <width>261</width>
       <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 700 22pt &quot;Script MT Bold&quot;;
+
 
 color: rgb(255, 0, 4);
 </string>
@@ -102,24 +109,24 @@ color: rgb(255, 0, 4);
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>90</y>
-      <width>256</width>
-      <height>451</height>
+      <x>850</x>
+      <y>70</y>
+      <width>221</width>
+      <height>371</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>310</y>
+      <x>500</x>
+      <y>240</y>
       <width>201</width>
       <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 17pt &quot;Segoe UI&quot;;
+     <string notr="true">font: 20pt &quot;Segoe UI Bold&quot;;
 color: rgb(57, 136, 255);</string>
     </property>
     <property name="text">
@@ -130,14 +137,14 @@ color: rgb(57, 136, 255);</string>
     <property name="geometry">
      <rect>
       <x>630</x>
-      <y>520</y>
+      <y>430</y>
       <width>151</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 198, 165);
-border-color: rgb(152, 255, 181);</string>
+font: 700 12pt &quot;Segoe UI Bold&quot;;</string>
     </property>
     <property name="text">
      <string>Add Task</string>
@@ -146,14 +153,15 @@ border-color: rgb(152, 255, 181);</string>
    <widget class="QPushButton" name="Add_Task_Schedueled">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>520</y>
-      <width>161</width>
+      <x>380</x>
+      <y>430</y>
+      <width>221</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(135, 255, 133);</string>
+     <string notr="true">color: rgb(47, 50, 255);
+font: 700 12pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="text">
      <string>Add Task at Sqedueled Time</string>
@@ -162,8 +170,8 @@ border-color: rgb(152, 255, 181);</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>0</y>
+      <x>840</x>
+      <y>-10</y>
       <width>311</width>
       <height>101</height>
      </rect>
@@ -179,8 +187,8 @@ color: rgb(52, 255, 86);</string>
    <widget class="QLineEdit" name="User_Input">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>420</y>
+      <x>500</x>
+      <y>360</y>
       <width>191</width>
       <height>51</height>
      </rect>
@@ -192,15 +200,15 @@ color: rgb(52, 255, 86);</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>330</y>
+      <x>10</x>
+      <y>220</y>
       <width>201</width>
       <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 17pt &quot;Segoe UI&quot;;
-color: rgb(176, 80, 255);</string>
+     <string notr="true">font: 20pt &quot;Segoe UI Bold&quot;;
+color: rgb(176, 80, 255)</string>
     </property>
     <property name="text">
      <string>Sorting Options</string>
@@ -211,13 +219,14 @@ color: rgb(176, 80, 255);</string>
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>201</width>
+      <width>251</width>
       <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 17pt &quot;Segoe UI&quot;;
-color: rgb(255, 255, 105);</string>
+     <string notr="true">font: 20pt &quot;Segoe UI Bold&quot;;
+font: 700 20pt &quot;Segoe UI&quot;;
+</string>
     </property>
     <property name="text">
      <string>Serching Options</string>
@@ -256,7 +265,7 @@ border-color: rgb(243, 255, 17);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1315</width>
+     <width>1081</width>
      <height>21</height>
     </rect>
    </property>
@@ -264,6 +273,8 @@ border-color: rgb(243, 255, 17);</string>
     <property name="title">
      <string>Clock</string>
     </property>
+    <addaction name="separator"/>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuClock"/>
   </widget>
